# TwoThirdsHonestMajorityMalicious

./: .gitignore  10000G_10000MG_100In_50Out_20D_OutputOne10P.txt  CMakeCache.txt  CMakeLists.txt  GF2_8LookupTable.h  HashEncrypt.cpp  HashEncrypt.h  MPCHonestMajorityNoTriplesYehuda.cbp  Makefile  ProtocolParty.h  README.md  TemplateField.cpp  cmake_install.cmake  main.cpp  run_protocol.sh
MATRIX/: build.sh  run.sh
